# RMEssentials

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  ChangeNameDialog.cpp  ChangeNameDialog.h  DownloadDialog.cpp  DownloadDialog.h  RMEssentials.pri  RMEssentials.pro  RMEssentials.vcxproj  RMEssentialsAndroid.qss  WHATSNEW  XDB.txt  androidqss.qrc  changename.pro  changename.qm  changename.sln  changename.ts  changename.vcxproj  changename.vcxproj.filters  dlpasswd  dlurl  downloader.cpp  downloader.h  index.html  lang.qrc  main.cpp  maindialog.cpp  maindialog.h  renamer.cpp  renamer.h  tips.txt  unoffBgList.txt  utils.cpp  utils.h  versioninfo  versioninfotest  whatsnew
android/: AndroidManifest.xml
lib/win32/: quazip.lib  quazip_d.lib
lib/win64/: quazip.lib  quazip_d.lib
qmake/: RMEssentials.pro
res/: 1.icns  RMEssentials.icns  RMEssentials.rc.in  icon.rc
src/: CMakeLists.txt  ChangeNameDialog.cpp  DownloadDialog.cpp  DownloadDialog.h  SongClientChangeDialog.cpp  SongClientChangeDialog.h  downloader.cpp  downloader.h  maindialog.cpp  maindialog.h  pch.h  songstruct.cpp  src.pro  uncompresser.cpp  uncompresser.h
src/core/: downloader.cpp  downloader.h  main.cpp  renamer.cpp  renamer.h  songfile.cpp  songfile.h  songstruct.cpp  songstruct.h  uncompresser.cpp  uncompresser.h  utils.cpp  utils.h
src/dialog/: ChangeNameDialog.cpp  ChangeNameDialog.h  DownloadDialog.cpp  DownloadDialog.h  PapaSongClientEditDialog.cpp  PapaSongClientEditDialog.h  SongClientChangeDialog.cpp  SongClientChangeDialog.h  SongClientEditDialog.cpp  SongClientEditDialog.h  maindialog.cpp  maindialog.h
src/librmessentials/: CMakeLists.txt  librmessentials.pro
src/librmessentials/res/: strTemp.txt  strtemp.qrc
src/librmessentials/src/: rmechart.cpp  rmechart.h  rmecrypt.cpp  rmecrypt.h  rmedownloader.cpp  rmedownloader.h  rmeglobal.c  rmeglobal.cpp  rmeglobal.h  rmerenamer.cpp  rmerenamer.h  rmesongfile.cpp  rmesongfile.h  rmesongstruct.cpp  rmesongstruct.h  rmeuncompresser.cpp  rmeuncompresser.h  rmeutils.cpp  rmeutils.h
src/librmessentials/test/: CMakeLists.txt  tst_rmechart.cpp  tst_rmechart.qrc  tst_rmeglobal.cpp  tst_rmeglobal_c.c  tst_rmeuncompresser.cpp  tst_rmeuncompresser.qrc  tst_rmeutils.cpp  tst_rmeutils.qrc
src/librmessentials/test/tst_rmechart/fromimd/: noteng.imd  separatorng.imd  sizebpmcountng.imd  sizenotecountng.imd
src/librmessentials/test/tst_rmechart/fromjson/: 130durationtimeng.json  130noduration.json  130nodurationtime.json  130notracks.json  notempo.json  notracks.json  noversion.json  signg.json  tempong.json  trackng.json  tracknonote.json  tracknoteng.json  tracknotesng.json  tracknotetojsonng.json  tracknotrack.json  tracksng.json  tracktrackng.json  versionng.json
src/librmessentials/test/tst_rmechart/toimd/: canonrock_4k_hd.imd.json  legend_5k_hd.imd  legend_5k_hd.imd.json  reai105dudeni_5k_hd.imd  reai105dudeni_5k_hd.imd.json
src/librmessentials/test/tst_rmechart/tojson/: caiyilinbeast_6k_hd.imd.json  crunch_5k_hd.imd  crunch_5k_hd.imd.json  friend01_4k_nm.imd.json
src/librmessentials/test/tst_rmeuncompresser/: uncompress_test.txt
src/librmessentials/test/tst_rmeutils/existnotes/: existnotes_5k_ez.imd.json  existnotes_5k_hd.imd.json  existnotes_5k_nm.imd.json  existnotes_6k_ez.imd.json
src/plugins/: plugins.pri  plugins.pro
src/plugins/uncompresser/: uncompresser.pro
src/plugins/uncompresser/7zcli/: 7zcli.json  7zcli.pro  7zcliplugin.cpp  7zcliplugin.h
src/plugins/uncompresser/libquazip/: libquazip.pro  quazip.json  quazipplugin.cpp  quazipplugin.h
src/plugins/uncompresser/libunrar/: libunrar.json  libunrar.pro  libunrarplugin.cpp  libunrarplugin.h
src/plugins/uncompresser/libunrar/src/: os.hpp  rar.hpp
src/plugins/uncompresser/unrarcli/: unrarcli.json  unrarcli.pro  unrarcliplugin.cpp  unrarcliplugin.h
src/plugins/uncompresser/unzipcli/: unzipcli.json  unzipcli.pro  unzipcliplugin.cpp  unzipcliplugin.h
src/quazip/: CMakeLists.txt  quazip.pro
src/quazip/src/: JlCompress.h  crypt.h  ioapi.h  quaadler32.h  quachecksum32.h  quacrc32.h  quagzipfile.h  quaziodevice.h  quazip.h  quazip_global.h  quazipdir.h  quazipfile.h  quazipfileinfo.h  quazipnewinfo.h  unzip.h  zip.h
src/rmessentials/: CMakeLists.txt  rmessentials.pro
src/rmessentials/android/: AndroidManifest.xml
src/rmessentials/android/res/values/: strings.xml
src/rmessentials/android/res/values-zh/: strings.xml
src/rmessentials/android5/: AndroidManifest.xml
src/rmessentials/src/: changename.cpp  changename.h  chartscene.cpp  chartscene.h  chartview.cpp  chartview.h  chartview.qrc  chartviewermodel.cpp  chartviewermodel.h  download.cpp  download.h  main.cpp  main.h  papasongclientedit.cpp  papasongclientedit.h  pastelineedit.cpp  pastelineedit.h  songclientedit.cpp  songclientedit.h
src/rmessentials/translations/: rmessentials.ts
src/xxtea/: CMakeLists.txt
tools/: AutoGenerateHeader.cmake  AutoGenerateHeader.sh  AutoGenerateHeader.vbs
vs2013/: RMEssentials.sln  RMEssentials.vcxproj  RMEssentials.vcxproj.filters
