
add_custom_target(RmEssTest)
if (BUILD_TESTING)
    set_target_properties(RmEssTest PROPERTIES
        EXCLUDE_FROM_ALL false
    )
endif()

function(add_librmess_test testname)
    if (Qt6_FOUND)
        add_executable("test${testname}6" EXCLUDE_FROM_ALL ${ARGN})
        add_dependencies(RmEssTest "test${testname}6")
        if (BUILD_TESTING)
            target_link_libraries("test${testname}6" PUBLIC RmEss6 Qt6::Test)
        endif()
        set_target_properties("test${testname}6" PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON)
        add_test(NAME "${testname} - Qt6" COMMAND "test${testname}6")
    endif()
    if (Qt5_FOUND)
        add_executable("test${testname}5" EXCLUDE_FROM_ALL ${ARGN})
        add_dependencies(RmEssTest "test${testname}5")
        if (BUILD_TESTING)
            target_link_libraries("test${testname}5" PUBLIC RmEss5 Qt5::Test)
        endif()
        set_target_properties("test${testname}5" PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON)
        add_test(NAME "${testname} - Qt5" COMMAND "test${testname}5")
    endif()
endfunction()

add_librmess_test(RmeChart tst_rmechart.cpp)
add_librmess_test(RmeGlobal tst_rmeglobal_c.c tst_rmeglobal.cpp)
